--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-Stefan Alecsa
-
-Me gusta la música y los videojuegos.
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <title>APPWEB</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilo.css">
+  </head>
+  <body>
+    <p><br>Stefan Alecsa</br>
+    <br>Me gusta la informática</br></p>
+  </body>
+</html>
