--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -6,6 +6,8 @@
     <title>Formularios</title>
 </head>
 <body>
-    <p>Nombre</p>
+    <p>Nombre:
+        <input type="text" size="40" required name="Nombre" placeholder="Ponga su Nombre">
+    </p>
 </body>
 </html>
