--- a/Audio HTML/video.html
+++ b/Audio HTML/video.html
@@ -17,7 +17,7 @@
    
     <h1>Video</h1>
 
-    <video src="Zeppelin_Explodes.webm" poster="Aplicaciones-Web-Progresivas-PWA.png" preload="metadata" controls></video>
+    <video src="Zeppelin_Explodes.webm" autoplay poster="Aplicaciones-Web-Progresivas-PWA.png" preload="metadata" controls></video>
 
     <h1>Audio</h1>
 
