--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -6,6 +6,8 @@
     <title>Formularios</title>
 </head>
 <body>
+    <p>Nombre<input type="text" required></p>
+    <p>Sexo<input type="radio" required</p>
     <p>Nombre:
         <input type="text" name="Nombre" required size="40" placeholder="Escriba aquí su nombre"></p>
     <p>Sexo:
