--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <p><br>Stefan Alecsa</br>
-    <br>Me gusta la informática</br></p>
+    <br>Ejercicios de Stefan Alecsa</br></p>
   </body>
 </html>
