--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <p><br>Stefan Alecsa</br>
-    <br>Ejercicios de Stefan Alecsa</br></p>
+    <br>Me gusta la informática</br></p>
+    <ul>
+      <li><a href="Listas/Stefan Listas.html">Listas</a></li>
+      <li><a href="Audio HTML/video.html">Audio</a></li>
+      <li><a href="Video HTML/video.html">Video</a></li>
+      <li><a href="Formularios/formularios.html">Formularios</a></li>
+    </ul>
   </body>
 </html>
