--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -10,7 +10,8 @@
         <input type="text" name="Nombre" required size="40" placeholder="Escriba aquí su nombre"></p>
     <p>Sexo:
         <input type="radio" name="hm" value="h" required>Hombre
-        <input type="radio" name="hm" value="m">Mujer</p>
+        <input type="radio" name="hm" value="m">Mujer
+    </p>
     <p>Edad:
         <input type="radio" name="edad" value="Adulto" required>Adulto
         <input type="radio" name="edad" value="Menor" readonly>Menor
