--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -12,6 +12,9 @@
         <input type="radio" name="hm" value="h" required>Hombre
         <input type="radio" name="hm" value="m" required>Mujer
     </p>
+    <p>Año de nacimiento:
+        <input type="number" name="Nacido" min="1990" placeholder="Fecha de nacimiento">
+    </p>
     <p>Edad:
         <input type="radio" name="edad" value="Adulto" required>Adulto
         <input type="radio" name="edad" value="Menor" readonly>Menor
