--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -6,6 +6,7 @@
     <title>Formularios</title>
 </head>
 <body>
+    <form action="Formlario.html" method="get">
     <p>Nombre:
         <input type="text" name="Nombre" required size="40" placeholder="Escriba aquí su nombre"></p>
     <p>Sexo:
@@ -28,7 +29,10 @@
     <p>Contraseña:
         <input type="text" name="Contraseña" size="40" placeholder="Escriba su contraseña" maxlength="8" minlength="5">
     </p>
-    <input type="submit" value="Enviar">
-    <button type="submit"><img src="Aplicaciones-Web-Progresivas-PWA.png" alt="Enviar" width="32" style="vertical-align: middle;">Enviar</button>
+    <p>
+        <input type="submit" value="Enviar">
+        <button type="submit"><img src="Aplicaciones-Web-Progresivas-PWA.png" alt="Enviar" width="32" style="vertical-align: middle;">Enviar</button>
+    </p>
+</form>
 </body>
 </html>
