--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -6,7 +6,7 @@
     <title>Formularios</title>
 </head>
 <body>
-    <form action="Formlario.html" method="get">
+    <form action="" method="get">
     <p>Nombre:
         <input type="text" name="Nombre" required size="40" placeholder="Escriba aquí su nombre"></p>
     <p>Sexo:
