--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -34,9 +34,25 @@
     <p>Contraseña:
         <input type="text" name="Contraseña" size="40" placeholder="Escriba su contraseña" maxlength="8" minlength="5">
     </p>
+    <p>¿Cuantos hijos quieres tener?:
+        <select name="menu">
+            <option>Elija una opción</option>
+            <option>Dos</option>
+            <option>Tres</option>
+            <option>Más de tres</option>
+        </select>
+    </p>
+    <p>¿Serías amable con tus compañeros de trabajo?:
+        <select name="menu">
+            <option>Si</option>
+            <option>¿Por que no?</option>
+            <option>Tal vez</option>
+            <option>No quiero</option>
+            <option>No me apetece</option>
+        </select>
+    </p>
     <p>
-        <input type="submit" value="Enviar">
-        <button type="submit"><img src="Aplicaciones-Web-Progresivas-PWA.png" alt="Enviar" width="32" style="vertical-align: middle;">Enviar</button>
+        <button type="submit"><img src="Aplicaciones-Web-Progresivas-PWA.png" alt="Enviar" width="150" style="vertical-align: middle;">Enviar</button>
     </p>
 </form>
 </body>
