--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -6,7 +6,8 @@
     <title>Formularios</title>
 </head>
 <body>
-    <form action="server.php" method="get">
+    <center>
+    <center action="server.php" method="get">
     <p>Nombre:
         <input type="text" name="Nombre" required size="40" placeholder="Escriba aquí su nombre"></p>
     <p>Sexo:
@@ -54,6 +55,7 @@
     <p>
         <button type="submit"><img src="Aplicaciones-Web-Progresivas-PWA.png" alt="Enviar" width="150" style="vertical-align: middle;">Enviar</button>
     </p>
+</center>
 </form>
 </body>
 </html>
