--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -52,6 +52,10 @@
             <option>No me apetece</option>
         </select>
     </p>
+    <p>¿Quieres trabajar con nosotros?:
+        <input type="checkbox" name="Casilla">Sí
+        <input type="checkbox" name="Casilla">No
+    </p>
     <p>
         <button type="submit"><img src="Aplicaciones-Web-Progresivas-PWA.png" alt="Enviar" width="150" style="vertical-align: middle;">Enviar</button>
     </p>
