--- a/Listas/Stefan Listas.html
+++ b/Listas/Stefan Listas.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <link rel="stylesheet" href="Estilos/Estilos.css">
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="Estilos/Estilos.css" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
@@ -12,7 +12,7 @@
 
     <ul>
       <li>Peras</li>
-      <li name="L1">Manzanas</li>
+      <li>Manzanas</li>
       <li>Chocolate</li>
       <li>Pizzas</li>
       <li>Napolitanas</li>
