--- a/Listas/Stefan Listas.html
+++ b/Listas/Stefan Listas.html
@@ -12,7 +12,7 @@
 
     <ul>
       <li>Peras</li>
-      <li>Manzanas</li>
+      <li class="L1">Manzanas</li>
       <li>Chocolate</li>
       <li>Pizzas</li>
       <li>Napolitanas</li>
@@ -26,11 +26,7 @@
       <li>Limpiar</li>
       <li>Comer</li>
     </ol>
-    <dl>
-      <dt>AW</dt>
-      <dd>Aplicaciones web</dd>
-      <dt>SI</dt>
-    </dl>
+
     <ul>
       <li>Peras</li>
       <li>Manzanas</li>
