--- a/Listas/Stefan Listas.html
+++ b/Listas/Stefan Listas.html
@@ -7,16 +7,17 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
     <h1>Ejercicio de listas</h1>
     <h3>Ejercicio de listas no ordenadas</h3>
 
     <ul>
-      <li>Peras</li>
+      <li class="L0">Peras</li>
       <li class="L1">Manzanas</li>
-      <li>Chocolate</li>
-      <li>Pizzas</li>
-      <li>Napolitanas</li>
-      <li>Plátano</li>
+      <li class="L2">Chocolate</li>
+      <li class="L3">Pizzas</li>
+      <li class="L4">Napolitanas</li>
+      <li class="L5">Plátano</li>
     </ul>
     <h3>Ejercicio de listas ordenadas</h3>
     <ol>
@@ -45,5 +46,6 @@
         <li>Comer</li>
       </ol>
     </ul>
+    </div>
   </body>
 </html>
