--- a/Listas/Stefan Listas.html
+++ b/Listas/Stefan Listas.html
@@ -2,50 +2,50 @@
 <html lang="es">
   <head>
     <link rel="stylesheet" href="Estilos/Estilos.css" />
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <div>
-    <h1>Ejercicio de listas</h1>
-    <h3>Ejercicio de listas no ordenadas</h3>
+      <h1>Ejercicio de listas</h1>
+      <h3>Ejercicio de listas no ordenadas</h3>
 
-    <ul>
-      <li class="L0">Peras</li>
-      <li class="L1">Manzanas</li>
-      <li class="L2">Chocolate</li>
-      <li class="L3">Pizzas</li>
-      <li class="L4">Napolitanas</li>
-      <li class="L5">Plátano</li>
-    </ul>
-    <h3>Ejercicio de listas ordenadas</h3>
-    <ol>
-      <li>Comprar</li>
-      <li>Preparar alimentos</li>
-      <li>Cocinar</li>
-      <li>Limpiar</li>
-      <li>Comer</li>
-    </ol>
-
-    <ul>
-      <li>Peras</li>
-      <li>Manzanas</li>
-      <li>Chocolate</li>
-      <li>Pizzas</li>
-      <ol>
-        <li>Comprar</li>
-      </ol>
-      <li>Napolitanas</li>
-      <li>Plátano</li>
-      <ol>
+      <ul>
+        <li class="L0">Peras</li>
+        <li class="L1">Manzanas</li>
+        <li class="L2">Chocolate</li>
+        <li class="L3">Pizzas</li>
+        <li class="L4">Napolitanas</li>
+        <li class="L5">Plátano</li>
+      </ul>
+      <h3>Ejercicio de listas ordenadas</h3>
+      <ol class="Lista">
         <li>Comprar</li>
         <li>Preparar alimentos</li>
         <li>Cocinar</li>
         <li>Limpiar</li>
         <li>Comer</li>
       </ol>
-    </ul>
+
+      <ul class="ul">
+        <li>Peras</li>
+        <li>Manzanas</li>
+        <li>Chocolate</li>
+        <li>Pizzas</li>
+        <ol>
+          <li>Comprar</li>
+        </ol>
+        <li>Napolitanas</li>
+        <li>Plátano</li>
+        <ol>
+          <li>Comprar</li>
+          <li>Preparar alimentos</li>
+          <li>Cocinar</li>
+          <li>Limpiar</li>
+          <li>Comer</li>
+        </ol>
+      </ul>
     </div>
   </body>
 </html>
