--- a/Ejercicios_CSS/Actividad_3.1.html
+++ b/Ejercicios_CSS/Actividad_3.1.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Actividad3.1</title>
-    <link rel="stylesheet" href="Actividad_3.1.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="Actividad_3.1.css" />
+  </head>
+  <body>
     <h1>Leonardo Da Vinci</h1>
-    <p>Elgrangenio del <span class="Ciudad">Renacimiento</span> italiano nació
-    en Anchiamo en el año 1452</p>
-    
-</body>
+    <p>
+      Elgrangenio del <span class="Ciudad">Renacimiento</span> italiano nació en
+      Anchiamo en el año 1452
+    </p>
+  </body>
 </html>
