--- a/Ejercicios_CSS/Actividad_3.1.html
+++ b/Ejercicios_CSS/Actividad_3.1.html
@@ -10,7 +10,7 @@
     <h1>Leonardo Da Vinci</h1>
     <p>
       Elgrangenio del <span class="Ciudad">Renacimiento</span> italiano nació en
-      Anchiamo en el año 1452
+      Anchiamo en el año 1452.
     </p>
   </body>
 </html>
