--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li><a href="Listas/Stefan Listas.html">Listas</a></li>
       <li><a href="Audio HTML/video.html">Audio</a></li>
       <li><a href="Video HTML/video.html">Video</a></li>
-      <li><a href="Formularios/formularios.html">Formularios</a></li>
+      <li><a href="Formularios/formularios.html">Formularos</a></li>
     </ul>
   </body>
 </html>
