--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Multimedia</title>
+    <style>
+        #cobreycoches{
+            border: 10px red solid;
+            padding: 1em;
+            color: rgb(208, 255, 0);
+            font-weight: bolder;
+            background-image: url(https://live.staticflickr.com/8661/15690533198_a342091079_b.jpg);
+            background-size: contain;
+            width: auto;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="cobreycoches">
+        <center><p>Me gusta el COBRE y los coches (No es Ironía)</p></center>
+    </div>
 </body>
 </html>
