--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" id="html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multimedia</title>
     <style>
         #cobreycoches{
-            border: 10px red solid;
-            padding: 1em;
+            border: 15px red solid;
+            padding: 14em;
             color: rgb(208, 255, 0);
             font-weight: bolder;
             background-image: url(https://live.staticflickr.com/8661/15690533198_a342091079_b.jpg);
             background-size: contain;
             width: auto;
+            background-repeat: no-repeat;
+            font-size: larger;
+        }
+        #html{
+            background-image: url(https://c.pxhere.com/photos/79/0e/jellyfish_purple_underwater_minimalist-1286190.jpg!d);
+            background-size: auto auto;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
