--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -6,8 +6,8 @@
     <title>Multimedia</title>
     <style>
         #cobreycoches{
-            border: 15px red solid;
-            padding: 14em;
+            border: 10px red solid;
+            padding: 10em;
             color: rgb(208, 255, 0);
             font-weight: bolder;
             background-image: url(https://live.staticflickr.com/8661/15690533198_a342091079_b.jpg);
@@ -15,11 +15,14 @@
             width: auto;
             background-repeat: no-repeat;
             font-size: larger;
+            background-position: 50% 50%;
         }
         #html{
+            
             background-image: url(https://c.pxhere.com/photos/79/0e/jellyfish_purple_underwater_minimalist-1286190.jpg!d);
             background-size: auto auto;
             background-repeat: no-repeat;
+            background-position: 50% 50%;
         }
     </style>
 </head>
