antes que te vayas dame un besoo

--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -24,6 +24,9 @@
             background-repeat: no-repeat;
             background-position: 50% 50%;
         }
+        p{
+            background-origin: content-box;
+        }
     </style>
 </head>
 <body>
