--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -21,11 +21,11 @@
             
             background-image: url(https://c.pxhere.com/photos/79/0e/jellyfish_purple_underwater_minimalist-1286190.jpg!d);
             background-size: auto auto;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-position: 50% 50%;
         }
         p{
-            background-origin: content-box;
+            background-origin:content-box ;
         }
     </style>
 </head>
