--- a/EJERCICIOSMCLIBRE/vscode-1.html
+++ b/EJERCICIOSMCLIBRE/vscode-1.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <center><p><b>PUESTA EN MARCHA. VISUAL STUDIO CODE 1</b></p></center>
-    <p>Esta página web es una página HTML válida.</p>
+    <p>Esa página web es una página HTML válida.</p>
 </body>
 </html>
