--- a/Fuentes/fuentes.html
+++ b/Fuentes/fuentes.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="fuentes.css">
 </head>
 <body>
-    
+    <p>Hola a todos, hoy veremos las fuentes.</p>
 </body>
 </html>
