--- a/Fuentes/fuentes.html
+++ b/Fuentes/fuentes.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Hola a todos, hoy veremos las fuentes.</p>
+    <p id="fuente2">Esto es la fuente 2 del texto.</p>
+    <p id="fuente3">Esto es la fuente número 3.</p>
 </body>
 </html>
