--- a/Listas/Stefan Listas.html
+++ b/Listas/Stefan Listas.html
@@ -21,11 +21,11 @@
       </ul>
       <h3>Ejercicio de listas ordenadas</h3>
       <ol class="Lista">
-        <li>Comprar</li>
-        <li>Preparar alimentos</li>
-        <li>Cocinar</li>
-        <li>Limpiar</li>
-        <li>Comer</li>
+        <li class="Azul">Comprar</li>
+        <li class="Azul">Preparar alimentos</li>
+        <li class="Azul">Cocinar</li>
+        <li class="Azul">Limpiar</li>
+        <li class="Azul">Comer</li>
       </ol>
 
       <ul class="ul">
