--- a/Texto en Línea/Texto en línea.html
+++ b/Texto en Línea/Texto en línea.html
@@ -28,5 +28,11 @@ no perdono<sup>x3</sup> a la tierra ni a la nada.<br>
 </pre>
     </p>
 
+    <p class="p1">Viva</p>
+    <p class="p2">La</p>
+    <p class="p3"><span><a href="https://www.mclibre.org/consultar/htmlcss/" target="_blank">La</span></a>tortilla</p>
+    <p class="p1 p3">Hola</p>
+    
+ 
 </body>
 </html>
