--- a/Texto en Línea/Texto en línea.html
+++ b/Texto en Línea/Texto en línea.html
@@ -31,8 +31,16 @@ no perdono<sup>x3</sup> a la tierra ni a la nada.<br>
     <p class="p1">Viva</p>
     <p class="p2">La</p>
     <p class="p3"><span><a href="https://www.mclibre.org/consultar/htmlcss/" target="_blank">La</span></a>tortilla</p>
-    <p class="p1 p3">Hola</p>
+    <p class="p1 p3"><a href="https://www.huffingtonpost.es/life/salud/la-tresnales-cuerpo-cafeina.html?utm_source=pocket-newtab-es-es" target="_blank">Hola</a></p>
     
+    <fieldset>
+        <legend>Datos personales</legend>
+        <label>Nombre:<input type="Nombre"></label>
+        <label>Apellidos:<Input type="Apellidos"></Input></label>
+    </fieldset>
+
+    <q lang="es">"Sólo se que no sé nada"</q>
+    <q lang="ro">"Doar stiu ca nu stiu nimic"</q>
  
 </body>
 </html>
