--- a/Actividades/Actividad3.1.html
+++ b/Actividades/Actividad3.1.html
@@ -15,14 +15,18 @@
         font-weight: bolder;
     }
     tbody>tr:nth-child(odd){
-        background-color:  rgb(28, 76, 150);
+        background-color:  rgb(12, 51, 109);
         color: white
     }
     tbody>tr:nth-child(even){
         background-color: white;
-        color: rgb(28, 76, 150);
+        color: rgb(27, 87, 177);
     }
-</style>
+    tbody>tr:nth-child(odd){
+        background-color: blue;
+        color: white;
+    }
+    </style>
 <body>
     <table border="2px">
         <thead>
@@ -32,10 +36,10 @@
         <td style="background-color: red;">TOTAL</td>
         </thead>
         <tr>
-            <td style="background-color: blue;">Alimentación</td>
-            <td style="background-color: blue;">1500</td>
-            <td style="background-color: blue;">1750</td>
-            <td style="background-color: blue;">3250</td>
+            <td>Alimentación</td>
+            <td>1500</td>
+            <td>1750</td>
+            <td>3250</td>
         </tr>
         <tr>
             <td>Tecnología</td>
@@ -44,10 +48,10 @@
             <td>3250</td>
         </tr>
         <tr>
-            <td style="background-color: blue;">Deporte</td>
-            <td style="background-color: blue;">1500</td>
-            <td style="background-color: blue;">1750</td>
-            <td style="background-color: blue;">3250</td>
+            <td>Deporte</td>
+            <td>1500</td>
+            <td>1750</td>
+            <td>3250</td>
         </tr>
         <tr>
             <td>Calzado</td>
@@ -56,10 +60,10 @@
             <td>3250</td>
         </tr>
         <tr>
-            <td style="background-color: blue;">Viajes</td>
-            <td style="background-color: blue;">1500</td>
-            <td style="background-color: blue;">1750</td>
-            <td style="background-color: blue;">3250</td>
+            <td>Viajes</td>
+            <td>1500</td>
+            <td>1750</td>
+            <td>3250</td>
         </tr>
         <tr>
             <td>Papelería</td>
