--- a/Actividades/Actividad3.1.html
+++ b/Actividades/Actividad3.1.html
@@ -29,6 +29,7 @@
     </style>
 <body>
     <table border="2px">
+        <caption>TABLA CON ESTILOS</caption>
         <thead>
         <td style="background-color: red;">CONCEPTO</td>
         <td style="background-color: red;">PRIMER SEMESTRE</td>
