--- a/index.html
+++ b/index.html
@@ -4,16 +4,42 @@
     <meta charset="utf-8">
     <title>APPWEB</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <p><br>Stefan Alecsa</br>
-    <br>Me gusta la informática</br></p>
+<h1>Index Stefan Alecsa</h1>
+<nav>
+  <p>
+    <a href="index.html">
+      <img src="https://live.staticflickr.com/4351/36463048575_d2f2ed6114_b.jpg" alt="Home" tittle="Ir a página principal" width="42" height="48">
+    </a>
+    <a href="#">
+      <img src="https://live.staticflickr.com/4351/36463048575_d2f2ed6114_b.jpg" alt="Principio de la página" title="Principio de la página" width="36" height="36">
+    </a>
+  </p>
+  <div class="toc">
+    <h2>Secciones del trabajo de Aplicaciones Web</h2>
     <ul>
-      <li><a href="Listas/Stefan Listas.html">Listas</a></li>
-      <li><a href="Audio HTML/video.html">Audio</a></li>
-      <li><a href="Video HTML/video.html">Video</a></li>
-      <li><a href="Formularios/formularios.html">Formularios</a></li>
+      <li><a href="index.html">Index</a></li>
+      <li><a href="CV/CV.html">CV</a></li>
+      <li><a href="Formulario/Formulario.html">Formulario</a></li>
+      <li>Sobre el proyecto</li>
+
     </ul>
+  </div>
+</nav>
+
+<main>
+
+</main>
+<footer>
+  <address>
+    Autor: Stefan Alecsa<br>
+    
+    correo: stefan.alecsa@educa.madrid.org
+  </address>
+  <p>Última modificación: 07 de noviembre del 2023</p>
+</footer>
+</center>
   </body>
 </html>
