--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Columnas</title>
     <style>
-
+        ul{
+            list-style-type: none;
+        }
     </style>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="" alt>
+        <h1>Curriculum</h1>
+        <nav>
+            <ul>
+                <li><a href=""></a>Inicio</li>
+                <li><a href=""></a>Curriculum</li>
+                <li><a href=""></a>Formulario</li>
+                <li><a href=""></a>Sobre el proyecto</li>
+            </ul>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
