--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -17,6 +17,8 @@
         }
         p{
             column-count: 4;
+            column-gap: 50px;
+            text-align: justify;
         }
     </style>
 </head>
