--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -17,10 +17,10 @@
     </header>
     <nav>
         <ul>
-            <li class="1"><a href="#">Inicio</a></li>
-            <li class="2"><a href="../CV/CV.html">Curriculum</a></li>
-            <li class="3"><a href="../Formulario/Formulario.html">Formulario</a></li>
-            <li class="4"><a href="../Ejercicios_CSS/Actividad_3.1.html">Sobre el proyecto</a></li>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="../CV/CV.html">Curriculum</a></li>
+            <li><a href="../Formulario/Formulario.html">Formulario</a></li>
+            <li><a href="../Ejercicios_CSS/Actividad_3.1.html">Sobre el proyecto</a></li>
         </ul>
     </nav>
 
