--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -13,12 +13,12 @@
     <header>
         <img class="logo" src="/COLUMNAAAAASS/pngtree-letter-s-logo-png-vector-png-image_6622476.jpg" alt="logo">
 
-        <h1>Currículum</h1>
+        <h1>Columnas</h1>
     </header>
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="../CV/CV.html">Curriculum</a></li>
+            <li><a href="../CV/CV.html">Currículum</a></li>
             <li><a href="../Formulario/Formulario.html">Formulario</a></li>
             <li><a href="../Ejercicios_CSS/Actividad_3.1.html">Sobre el proyecto</a></li>
         </ul>
