--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -25,7 +25,18 @@
     </nav>
 
     <main>
-        <p></p>
+        <p>Los párrafos son unidades semánticas estructurales del texto que pueden estar
+            constituidas por una oración o por una serie de oraciones, y suponen un bloque temático
+            unitario y homogéneo. La extensión de estas unidades es muy variable ya que depende
+            no sólo del estilo del escritor sino también del contenido del párrafo. Cada párrafo
+            contiene un número determinado de líneas, de tal manera que en cuanto se hace punto y
+            aparte se inicia otro párrafo. Es pues, también, una división física del texto.
+            La forma de los párrafos es importante en la investigación ya que depende de
+            nuestros deseos o de la aplicación concreta del texto, y proporciona al escrito una
+            coherencia con el resto de los elementos del documento. Por ejemplo, no se dispone igual
+            el texto general del trabajo que el texto de una cita o el texto de una bibliografía o de un
+            glosario. Los tipos o formas de párrafos más importantes en la investigación filosófica
+            son los siguientes: ordinario, alemán, francés, y en bandera.</p>
     </main>
     <footer>
         <p>Autor: Stefan Alecsa</p>
