--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -25,7 +25,7 @@
     </nav>
 
     <main>
-        <p>Los párrafos son unidades semánticas estructurales del texto que pueden estar
+        <img src="/COLUMNAAAAASS/36463048575_d2f2ed6114_b.jpg"><p>í, los párrafos son unidades semánticas estructurales del texto que pueden estar
             constituidas por una oración o por una serie de oraciones, y suponen un bloque temático
             unitario y homogéneo. La extensión de estas unidades es muy variable ya que depende
             no sólo del estilo del escritor sino también del contenido del párrafo. Cada párrafo
