--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -10,11 +10,11 @@
 
 <body>
 
-    <header>
-        <img class="logo" src="/COLUMNAAAAASS/pngtree-letter-s-logo-png-vector-png-image_6622476.jpg" alt="logo">
+    <center><header>
+        <img class="logo" src="superman-logo-transparent-free-png.png" alt="logo">
 
-        <h1>Columnas</h1>
-    </header>
+        <h1>COLUMNAS</h1>
+    </header></center>
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
@@ -25,7 +25,7 @@
     </nav>
 
     <main>
-        <img src="/COLUMNAAAAASS/36463048575_d2f2ed6114_b.jpg"><p>í, los párrafos son unidades semánticas estructurales del texto que pueden estar
+        <p>Los párrafos son unidades semánticas estructurales del texto que pueden estar
             constituidas por una oración o por una serie de oraciones, y suponen un bloque temático
             unitario y homogéneo. La extensión de estas unidades es muy variable ya que depende
             no sólo del estilo del escritor sino también del contenido del párrafo. Cada párrafo
