--- a/COLUMNAAAAASS/columnas.html
+++ b/COLUMNAAAAASS/columnas.html
@@ -13,7 +13,7 @@
     <center><header>
         <img class="logo" src="superman-logo-transparent-free-png.png" alt="logo">
 
-        <h1>Columnas</h1>
+        <h1 class="tituo">Columnas</h1>
     </header></center>
     <nav>
         <ul>
