--- a/Actividades/Position.html
+++ b/Actividades/Position.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ejercicio de Posicionamiento de Elementos</title>
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+    <link rel="stylesheet" type="text/css" href="Position.css">
 </head>
 
 <body>
@@ -29,25 +29,25 @@
 
         </nav>
         <figure id="li1">
-            <img src="img/img1.jpg" />
+            <img src="img1.jpg" />
             <figcaption>Lugar de Interés 1</figcaption>
         </figure>
         <figure id="li2">
-            <img src="img/img2.jpg" />
+            <img src="img2.jpg" />
             <figcaption>Lugar de Interés 2</figcaption>
         </figure>
         <figure id="li3">
-            <img src="img/img3.jpg" />
+            <img src="img3.jpg" />
             <figcaption>Lugar de Interés 3</figcaption>
         </figure>
         <figure id="li4">
-            <img src="img/img4.jpg" />
+            <img src="img4.jpg" />
             <figcaption>Lugar de Interés 4</figcaption>
         </figure>
     </div>
 
     <div class="fixed-sidebar">
-        <img src="img/profile.png" />
+        <img src="profile.png" />
         <ul>
             <li>Home</li>
             <li>Products</li>
