--- a/Actividades/Ejercicio_FLOAT.html
+++ b/Actividades/Ejercicio_FLOAT.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EJERCICIO PŔACTICO ELEMENTOS FLOTANTES</title>
 
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+    <link rel="stylesheet" type="text/css" href="Ejercicio_FLOAT.css" />
 </head>
 
 <body>
