--- a/Actividades/Ejercicio_FLOAT.html
+++ b/Actividades/Ejercicio_FLOAT.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EJERCICIO PŔACTICO ELEMENTOS FLOTANTES</title>
 
-    <link rel="stylesheet" type="text/css" href="Ejercicio_FLOAT.css" />
+    <link rel="stylesheet" type="text/css" href="Ejercicio_FLOAT.css">
 </head>
 
 <body>
@@ -46,19 +46,19 @@
         </div>
         <section class="courses">
             <div class="course">
-                <p><img src="img/logo.jpg" /></p>
+                <p><img src="logo.jpg" /></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime animi at, unde sit qui quam deserunt
                     exercitationem voluptates nisi, ea harum ex necessitatibus voluptatum, vel commodi iusto
                     repudiandae adipisci ratione?</p>
             </div>
             <div class="course">
-                <p><img src="img/logo.jpg" /></p>
+                <p><img src="logo.jpg" /></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime animi at, unde sit qui quam deserunt
                     exercitationem voluptates nisi, ea harum ex necessitatibus voluptatum, vel commodi iusto
                     repudiandae adipisci ratione?</p>
             </div>
             <div class="course">
-                <p><img src="img/logo.jpg" /></p>
+                <p><img src="logo.jpg" /></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime animi at, unde sit qui quam deserunt
                     exercitationem voluptates nisi, ea harum ex necessitatibus voluptatum, vel commodi iusto
                     repudiandae adipisci ratione?</p>
