--- a/CV/CV.html
+++ b/CV/CV.html
@@ -68,12 +68,12 @@
             flex: 1;
         }
 
-        h2,
-        h3 {
+        h2, h3 {
             color: #3498db; 
         }
 
         h2.Con{
+            border-top:2px solid  rgb(39, 173, 214) ;
             border-bottom: 2px solid rgb(39, 173, 214);  /*Si pones 2px luego solid y luego el color te pondrá una línea justo debajo*/
             padding-bottom: 5px;
             margin-top: 20px;
@@ -116,6 +116,10 @@
             margin-top: 20px;
             margin-bottom: 100px; 
         }
+        footer{
+            list-style: none;
+            display: inline-flex;
+        }
     </style>
 </head>
 
@@ -123,11 +127,11 @@
 
     <header>
         <div class="logo">
-            <a href="../index.html"><img src="Logo.png" alt="Logo"></a>
+            <a href="../index.html"><img src="klipartz.com.png" alt="Logo"></a>
         </div>
         <div class="container">
             <h1>Stefan Alecsa</h1>
-            <p>Administrador de sistemas</p>
+            <p>Futuro Administrador de sistemas</p>
         </div>
     </header>
 
@@ -135,7 +139,7 @@
         <a href="#Sobre_Mí">Sobre Mí</a>
         <a href="#experiencia">Experiencia Laboral</a>
         <a href="#educacion">Educación</a>
-        <a href="#habilidades">Habilidades Técnicas</a>
+        <a href="#habilidades">Habilidades</a>
     </nav>
 
     <div class="container main">
@@ -179,7 +183,7 @@
         </div>
 
         <div class="section Habilidades" id="habilidades">
-            <h2>Habilidades Técnicas</h2>
+            <h2>Habilidades</h2>
             <div class="Habilidad">DNS</div>
             <div class="Habilidad">HTTP</div>
             <div class="Habilidad">SSH</div>
@@ -188,7 +192,15 @@
             <div class="Habilidad">Redes locales</div>
         </div>
     </div>
-
+    <center>
+    <div class="footer">
+    <footer>
+        <li>Autor: Stefan Vlad Alecsa
+        Correo: stefan.alecsa@educa.madrid.org
+        Última modificación: 07 de noviembre del 2023</li>
+    </footer>
+    </div>
+</center>
 </body>
 
 </html>
