--- a/CV/CV.html
+++ b/CV/CV.html
@@ -28,6 +28,7 @@
         <a href="#habilidades">Habilidades</a>
     </nav>
 
+
     <div class="container main">
         <div class="section" id="Sobre_Mí">
             <h2 class="Con">Sobre Mí</h2>
@@ -81,12 +82,19 @@
     <center>
     <div class="footer">
     <footer>
-        <li>Autor: Stefan Vlad Alecsa
-        Correo: stefan.alecsa@educa.madrid.org
-        Última modificación: 07 de noviembre del 2023</li>
+        <p>Autor: Stefan Vlad Alecsa</p>
+        <p>Correo: stefan.alecsa@educa.madrid.org</p>
+        <p>Última modificación: 07 de noviembre del 2023</p>
     </footer>
     </div>
 </center>
+<nav class="Menú">
+    <ul>
+    <li class="lista"><a href="../index.html">Sobre Mí</a></li>
+    <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Experiencia Laboral</a></li>
+    <li class="lista"><a href="../Formulario/Formulario.html">Educación</a></li>
+</ul>
+</nav>
 </body>
 
 </html>
