Formulario y SObre el proyecto

--- a/CV/CV.html
+++ b/CV/CV.html
@@ -19,6 +19,10 @@
             <h1>Stefan Alecsa</h1>
             <p>Futuro Administrador de sistemas</p>
         </div>
+        <div class="contacto">
+                <p>Teléfono: 643411976</p>
+                <p>Correo: alecsastefan16@gmail.com</p>
+        </div>
     </header>
 
     <nav>
@@ -80,19 +84,17 @@
         </div>
     </div>
     <center>
-    <div class="footer">
     <footer>
-        <p>Autor: Stefan Vlad Alecsa</p>
-        <p>Correo: stefan.alecsa@educa.madrid.org</p>
-        <p>Última modificación: 07 de noviembre del 2023</p>
+        <p class="footer">Autor: Stefan Vlad Alecsa</p>
+        <p class="footer">Correo: stefan.alecsa@educa.madrid.org</p>
+        <p class="footer">Última modificación: 07 de noviembre del 2023</p>
     </footer>
-    </div>
 </center>
 <nav class="Menú">
     <ul>
-    <li class="lista"><a href="../index.html">Sobre Mí</a></li>
-    <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Experiencia Laboral</a></li>
-    <li class="lista"><a href="../Formulario/Formulario.html">Educación</a></li>
+    <li class="lista"><a href="../index.html">Index</a></li>
+    <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
+    <li class="lista"><a href="../Formulario/Formulario.html">Formulario</a></li>
 </ul>
 </nav>
 </body>
